welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
	def finale():Boolean = {
                               ^